# pedsim_ros

./: .gitmodules
pedsim_gazebo_plugin/: CMakeLists.txt  package.xml
pedsim_gazebo_plugin/launch/: social_contexts.launch  test.launch
pedsim_gazebo_plugin/models/: actor_model.sdf  model.dae  model2.dae  model3.dae  model4.dae  model5.dae  model6.dae
pedsim_gazebo_plugin/src/: actor_poses_plugin.cpp  ign_actor_poses_plugin.cpp  ign_actor_poses_plugin_v2.cpp
pedsim_gazebo_plugin/worlds/: office_small_actors.world  scene01.world  social_contexts.world  social_contexts_ignition.world
pedsim_simulator/config/: PedsimSimulator.cfg
pedsim_simulator/launch/: robot_controller.launch  simple_pedestrians.launch  sources_and_sinks.launch
pedsim_simulator/scenarios/: nav_scene.xml  scene01.xml  scene02.xml  scene03.xml  scene04.xml  scene05.xml  social_contexts.xml  test.xml
pedsim_simulator/scripts/: keyboard_teleop.py
pedsim_simulator/src/: simulate_diff_drive_robot.cpp  simulator.cpp
